--- a/css/add_task.css
+++ b/css/add_task.css
@@ -144,9 +144,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-radius: 10px;
 }
 
-.assigned-to-box:hover {
-    background: var(--placeholder-color);
-}
+
 
 .assigned-to-user {
     display: flex;
@@ -166,14 +164,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-right: 52px;
 }
 
-.assigned-to-box:active {
-    background: var(--focus-color-btn);
-    color: white;
-}
 
-.assigned-to-box:active svg rect {
-    stroke: white;
-}
+
+
   
 .assigned-to-box.selected-contact {
     background: var(--mockup-color);
@@ -181,10 +174,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: white;
 }
 
-.assigned-to-box.selected-contact:hover {
-    background: var(--focus-color-btn);
 
-}
 
 .assigned-to-box.selected-contact svg path {
     stroke: white; 
@@ -215,10 +205,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     transition: all 300ms  ease-in-out;
 }
 
-.at-prio-img img:hover {
-    box-shadow: -5px  10px 20px var(--placeholder-color); 
-    transform: translate3d(0, -5px, 0); 
-}
+
 
 .at-prio-img-green:active {
     box-shadow: 0 0px 5px  #7AE229;
@@ -231,6 +218,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .at-prio-img-red:active {
     box-shadow: 0 0px 5px  #FF3D00;
 }
+
 
 .category-dropdown {
     position: relative;
@@ -261,14 +249,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     transition: all 300ms  ease-in-out;
 }
 
-.category-dropdown ul li:hover {
-    background: var(--placeholder-color);
-}
 
-.category-dropdown ul li:active {
-    background: var(--focus-color-btn);
-    color: white;
-}
+
 
 .category-dropdown ul li.selected-contact {
     background: var(--mockup-color);
@@ -276,9 +258,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     color: white;
 }
 
-.category-dropdown ul li.selected-contact:hover {
-    background: var(--focus-color-btn);
-}
+
+
+
+
+
 
 .subtasks-decision-img {
     display: flex;
@@ -338,9 +322,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0.5; 
   }
 
-.subtask-list ul li:hover {
-    background: var(--placeholder-color);
-}
+
 
 .subtask-list ul li::before {
     content: '\2022';
@@ -381,9 +363,7 @@ li:hover .hidden-Edit_menu {
     display: flex; 
 }
 
-li:active .hidden-Edit_menu {
-    display: flex;
-}
+
 
 .d-none {
     display: none;
@@ -416,6 +396,24 @@ li:active .hidden-Edit_menu {
     .bottom-btns-container {
         display: flex;
         gap: 16px;
+    }
+    .at-prio-img img:hover {
+        transform: translate3d(0, -3px, 0); 
+    }
+    .assigned-to-box:hover {
+        background: var(--placeholder-color);
+    }
+    .assigned-to-box.selected-contact:hover {
+        background: var(--focus-color-btn);
+    }
+    .category-dropdown ul li:hover {
+        background: var(--placeholder-color);
+    }
+    .category-dropdown ul li.selected-contact:hover {
+        background: var(--focus-color-btn);
+    }
+    .subtask-list ul li:hover {
+        background: var(--placeholder-color);
     }
 }
 
@@ -480,12 +478,37 @@ li:active .hidden-Edit_menu {
     .editable-span {
         max-width: 50vw;
     }
+    .assigned-to-box:active {
+        background: var(--focus-color-btn);
+        color: white;
+    }
+    .assigned-to-box:active svg rect {
+        stroke: white;
+    }
+    .assigned-to-box.selected-contact:active {
+        background: var(--focus-color-btn);
+        color: white;
+    }
+    .category-dropdown ul li:active {
+        background: var(--focus-color-btn);
+        color: white;
+    }
+    .category-dropdown ul li.selected-contact:active {
+        background: var(--focus-color-btn);
+        color: white;
+    }
+    li:active .hidden-Edit_menu {
+        display: flex;
+    }
+    .subtask-list ul li:active {
+        background: var(--placeholder-color);
+    }
 }
 
 @media (max-width: 466px) {
     .at-prio-img img {
-        height: 30px;
-        width: 85px;
+        height: 32px;
+        width: 87px;
     }
     .content-container h1 {
         font-size: 43px;
@@ -495,7 +518,7 @@ li:active .hidden-Edit_menu {
     .editable-span,
     .content-bottom-container,
     .bottom-btns-container button {
-        font-size: 16px;
+        font-size: 18px;
     }
     .assigned-to-box {
         padding: 8px 7px;
@@ -511,10 +534,11 @@ li:active .hidden-Edit_menu {
         margin-right: 12px;
     }
     .subtask-list ul li  {
-        padding: 4px 0; 
+        padding: 4px 12px; 
+        margin-inline: 12px;
     }
     .filled-btn {
-        width: 130px;
+        width: 150px;
         height: 40px;
     }
 }  
