--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,14 @@ h2 {
     background-color: var(--mockup-highlight);
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+
 .filled-btn, 
 .white-btn {
     border-radius: 8px;
