--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -31,9 +31,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .content-container h1 {
-    font-size: 47px;
+    font-size: 54px;
     line-height: 56.4px;
-    font-weight: 700;
+    font-weight: bold;
     transition: all 300ms  ease-in-out;
 }
 
@@ -440,7 +440,7 @@ li:hover .hidden-Edit_menu {
     .content-container h1 {
         position: absolute;
         top: 206px;
-        font-size: 61px;
+        font-size: 64px;
         line-height: 73.2px;
     }
     .content-bottom-container {
