--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -39,7 +39,7 @@
     right: 16px;
     overflow: hidden;
     transform: translateY(100%);
-    transition: transform 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
 }
 
 .card-content.card-visible {
@@ -196,9 +196,10 @@
 .ac-btn-container {
     width: 100%;
     display: flex;
+    align-items: center;
     margin-top: 32px;
     justify-content: center;
-    gap: 24px;
+    gap: 12px;
 }
 
 .card-inputs {
@@ -227,7 +228,7 @@
     display: none;
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1340px) {
     .close-ac-card-mobile {
         display: none;
     }
@@ -248,7 +249,7 @@
         left: 88px;
         right: 88px;
         height: 800px;
-        max-width: 1500px;
+        max-width: 1920px;
     }
     .ac-card-circle-mobile {
         display: none;
@@ -291,7 +292,7 @@
     }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1340px) {
     .footer-right {
         margin-inline: 100px;
     }
@@ -304,8 +305,26 @@
     .close-ac-card-mobile:active {
         background: var(--mockup-highlight);
     }
+    .input_ac{
+        width: 60%;
+        transition: all 300ms ease-in-out
+        ;
+    }
+    .card-content {
+        left: 88px;
+        right: 88px;
+    }
 }
+@media (max-width: 1100px) {
+    .card-content {
+        left: 16px;
+        right: 16px;
+    }
+    .input_ac {
+        width: 100%;
+    }
 
+}
 @media (min-width: 761px) {
     .ac-circle {
         position: absolute;
@@ -376,5 +395,14 @@
     }
     .ac-bottom-line {
         width: 78px
+    }
+    .ac-btn-fill {
+        height: 40px;
+        width: 160px;
+
+    }
+    .ac-btn-fill span {
+        
+        font-size: 16px;
     }
 }
