--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -23,6 +23,7 @@
     padding: 17px 0px 17px 40px;
     font-size: 20px;
     width: 100%;
+    transition: all 300ms ease-in-out;
 }
 
 .letter-style::after {
@@ -47,7 +48,8 @@
     align-items: center;
     padding: 15px 0px 15px 24px;
     cursor: pointer;
-    margin-bottom: 1px;
+    margin: 2px 0 1px 0;
+    transition: all  300ms ease-in-out;
 }
 
 .contact-style.selected-contact {
@@ -86,6 +88,7 @@
     height: 42px;
     border: 2px solid white;
     margin: 0 24px 0 0px;
+    transition: all 300ms ease-in-out;
 }
 
 .contact-content {
@@ -93,6 +96,7 @@
     flex-direction: column;
     gap: 5px;
     font-size: 20px;
+    transition: all 300ms ease-in-out;
 }
 
 .contact-content span:last-child {
@@ -155,3 +159,24 @@
         width: calc(100vw - 688px);
     }
 }
+@media (max-width: 400px) {
+    .contact-content {
+        font-size: 16px;
+    }
+    .all-contacts-content {
+        margin-inline: 8px;
+    }
+    .contact-style {
+        padding: 15px 0px 15px 8px;
+    }
+    .letter-style {
+        padding: 17px 0px 17px 22px;
+    } 
+    .contact-circle {
+        margin-right: 12px;
+    }  
+    .contact-content span:last-child {
+        font-size: 12px;
+    }
+}
+
