--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,11 +1,10 @@
 <link rel="stylesheet" href="/css/footer.css">
 <footer class="footer">
-    <div>
+    <div class="footer-wrapper">
         <div class="desktop-logo">
             <img src="/assets/img/footer_logo.png" alt="Join Logo">
         </div>
-
-        <div class="menu-box">
+        <div class="menu-wrapper">
             <div class="menu-content" >
                 <div class="footer-icon-box">
                     <a href="/summary.html" class="footer-link">
@@ -32,9 +31,8 @@
                     </a>
                     </div>
                 </div>
+            </div>
         </div>
-        </div>
-
        
         <div class="desktop-data-box">
             <a href="/privacy_policy.html" class="desktop-data-link">Privacy Policy</a>
