--- a/css/board.css
+++ b/css/board.css
@@ -6,12 +6,12 @@
     position: absolute;
     top: 136px;
     right: 16px;
-    background-color:  #2a3647;
+    background-color: var(--mockup-color);
     width: 40px;
     height: 40px;
     border-radius: 10px;
     padding: 3px;
-    gap: 20px;
+    border: none;
 }
 
 .find-task {
