open User by click added

--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -92,6 +92,8 @@
     height: 120px;
     width: 120px;
     border-radius: 50%;
+    font-size: 47px;
+    font-weight: 500;
     background: #D1D1D1;
 }
 
