board.css u. colors

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #2a3647;
+    background-color: var(--mockup-color);
     position: absolute;
     width: 232px;
     bottom: 0;
