--- a/css/board/board.css
+++ b/css/board/board.css
@@ -29,7 +29,7 @@
     border: none;
     height: 32px;
     font-size: 20px;
-    color: #D1D1D1;
+    color: var(--placeholder-color);
     margin: 16px 0 16px 8px;
 }
 
@@ -42,7 +42,7 @@
     border-top: none;
     border-right: none;
     border-bottom: none;
-    background-color: white;
+    background-color: var(--white-color);
     margin: 16px 8px 16px 0;
     padding-left: 16px;
 
@@ -58,10 +58,10 @@
     position: absolute;
     top: 0;
     right: 0px;
-    background-color: white;
+    background-color:  var(--white-color);
     width: 30px;
     height: 30px;
-    border: 2px solid #2A3647;
+    border: 2px solid var(--mockup-color);
     border-radius: 10px;
     padding: 3px;
     gap: 10px;
