--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -48,8 +48,9 @@
     align-items: center;
     padding: 15px 0px 15px 24px;
     cursor: pointer;
+    border-radius: 10px;
     margin: 2px 0 1px 0;
-    transition: all  300ms ease-in-out;
+    transition: background-color 300ms ease-in-out;
 }
 
 .contact-style.selected-contact {
