--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -5,8 +5,15 @@
     left: 0;
     right: 0;
     background: rgb(255, 255, 255);
-    z-index: 1000;
+    z-index: 999;
+    transition: all 300ms ease-in-out;
+
 }
+.show-overlay.show-card-visible {
+    transform: translateX(0);
+}
+
+
 .open-contacts-header  {
     position: relative;
     display: flex;
@@ -160,11 +167,19 @@
 
 @media (min-width: 1340px) {
     .show-overlay {
-        top: 280px;
+        top: 319px;
         right: 0;
         left: calc(232px +  500px);
-
+        transform: translateX(100%);
     }
+    .open-contacts-header {
+        display: none;
+    }
+}
 
-
+@media (min-width: 2500px) {
+    .show-overlay {
+        transform: translateY(100%);
+    }
+   
 }
