--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -1,185 +1,201 @@
 .show-overlay {
-    position: absolute;
-    top: 83px;
-    bottom: 80px;
-    left: 0;
-    right: 0;
-    background: rgb(255, 255, 255);
-    z-index: 990;
-    transition: all 300ms ease-in-out;
-
+  position: absolute;
+  top: 83px;
+  bottom: 80px;
+  left: 0;
+  right: 0;
+  background: rgb(255, 255, 255);
+  z-index: 990;
+  transition: all 300ms ease-in-out;
 }
 .show-overlay.show-card-visible {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
-
-.open-contacts-header  {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
-    margin: 45px 0 48px 16px;
- 
+.open-contacts-header {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  margin: 45px 0 48px 16px;
 }
-.open-contacts-arrow  {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    top: 10px;
-    right: 16px;
-    border-radius: 50%;
-    padding: 4px;
+.open-contacts-arrow {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  top: 10px;
+  right: 16px;
+  border-radius: 50%;
+  padding: 4px;
 }
-
 
 .open-contacts-header h1 {
-    text-wrap: wrap;
-    font-weight: bold;
-    font-size: 64px;
-    transition: all 300ms ease-in-out;
+  text-wrap: wrap;
+  font-weight: bold;
+  font-size: 64px;
+  transition: all 300ms ease-in-out;
 }
 .open-contacts-header span {
-    font-size: 24px;
-    transition: all 300ms ease-in-out;
+  font-size: 24px;
+  transition: all 300ms ease-in-out;
 }
 .horizontal-bar {
-    margin-top: 16px;
-    height: 3px;
-    width: 110px;
-    border: 3px;
-    background: var(--mockup-highlight);
+  margin-top: 16px;
+  height: 3px;
+  width: 110px;
+  border: 3px;
+  background: var(--mockup-highlight);
 }
 
 .open-contacts-name {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-left: 16px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-left: 16px;
 }
+
 .open-contacts-name span {
-    font-size: 36px;
-    font-weight: 700;
+  font-size: 36px;
+  font-weight: 700;
 }
+
+.desktop-menu-container {
+  display: none;
+  margin-top: 11px;
+}
+
+.desktop-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  gap: 8px;
+}
+
+.desktop-menu span {
+  font-size: 20px;
+  font-weight: 400;
+  margin-right: 16px;
+  color: var(--mockup-color);
+}
+
+.contact-name {
+  margin-left: 34px;
+  transition: all 300ms ease-in-out;
+}
+
 .open-contacts-circle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    font-size: 27px;
-    border: 2px solid white;
-    transition: all 300ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  font-size: 27px;
+  border: 2px solid white;
+  transition: all 300ms ease-in-out;
 }
 
 .contact-info {
-    margin: 21px 0 0 16px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 21px;
+  margin: 21px 0 0 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 21px;
 }
 .contact-info h2 {
-    font-size: 24px;
-    font-weight: 400;
-    transition: all 300ms ease-in-out;
+  font-size: 24px;
+  font-weight: 400;
+  transition: all 300ms ease-in-out;
 }
 
 .contact-method {
-    display: flex;
-    flex-direction: column;
-    gap: 21px;
-    font-size: 20px;
-    transition: all 300ms ease-in-out;
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  font-size: 20px;
+  transition: all 300ms ease-in-out;
 }
 
 .contact-method span {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .contact-method span:last-child {
-    font-weight: 400;
+  font-weight: 400;
 }
 
-.contact-method  a {
-    color: var(--hyper-link-color);
+.contact-method a {
+  color: var(--hyper-link-color);
 }
-
-
-
-
-
 
 @media (min-width: 761px) {
-    .show-overlay {
-        left: 232px;
-        bottom: 0px;
-    }
-    .open-contacts-arrow:hover  {
-        background: var(--mockup-color);
-    }
-    .open-contacts-arrow:active  {
-        background: var(--focus-color-btn);
-    }
-    .open-contacts-arrow:active svg path  {
-        
-        fill: white;
-    }
+  .show-overlay {
+    left: 232px;
+    bottom: 0px;
+  }
+  .open-contacts-arrow:hover {
+    background: var(--mockup-color);
+  }
+  .open-contacts-arrow:active {
+    background: var(--focus-color-btn);
+  }
+  .open-contacts-arrow:active svg path {
+    fill: white;
+  }
 }
 @media (max-width: 761px) {
-    .open-contacts-arrow:active  {
-        
-        background: var(--placeholder-color);
-    }
+  .open-contacts-arrow:active {
+    background: var(--placeholder-color);
+  }
+  .contact-name {
+    margin-left: 0px;
+  }
 }
 
-
-
-
-
-
 @media (max-width: 457px) {
-    .open-contacts-header h1 {
-        font-size: 41px;
-    }
-    .open-contacts-header span,
-    .contact-method {
-        font-size: 16px;
-    }
-    .open-contacts-name span {
-        font-size: 30px;
-    }
-    .open-contacts-circle{
-        height: 60px;
-        width: 60px;
-        font-size: 23px;
-
-    }
-    .contact-info h2 {
-        
-        font-size: 20px;
-    }
+  .open-contacts-header h1 {
+    font-size: 41px;
+  }
+  .open-contacts-header span,
+  .contact-method {
+    font-size: 16px;
+  }
+  .open-contacts-name span {
+    font-size: 30px;
+  }
+  .open-contacts-circle {
+    height: 60px;
+    width: 60px;
+    font-size: 23px;
+  }
+  .contact-info h2 {
+    font-size: 20px;
+  }
 }
 
 @media (min-width: 1340px) {
-    .show-overlay {
-        top: 319px;
-        right: 0;
-        left: calc(232px +  500px);
-        transform: translateX(100%);
-    }
-    .open-contacts-header {
-        display: none;
-    }
+  .show-overlay {
+    top: 319px;
+    right: 0;
+    left: calc(232px + 500px);
+    transform: translateX(100%);
+  }
+  .open-contacts-header {
+    display: none;
+  }
+  .desktop-menu-container {
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media (min-width: 2500px) {
-    .show-overlay {
-        transform: translateY(100%);
-    }
-   
+  .show-overlay {
+    transform: translateY(100%);
+  }
 }
