--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -1,3 +1,11 @@
+.ac-err-msg {
+  position: absolute;
+  top: 47px;
+  left: 0;
+  color: var(--err-msg-color);
+  font-size: 12px;
+}
+
 .contacts-wrapper {
   position: absolute;
   top: 80px;
