--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -252,6 +252,7 @@
   background: white;
   bottom: 103px;
   right: 16px;
+  padding-inline: 8px;
   border-bottom-left-radius: 20px;
   box-shadow: -4px 6px 6px 0px #00000040;
   z-index: 999;
@@ -268,7 +269,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px 0 10px 22px;
   gap: 16px;
   color: var(--mockup-color);
 }
@@ -278,6 +278,9 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  width: 116px;
+  padding: 6px 20px;
+  border-radius: 10px;
 }
 
 @media (min-width: 1341px) {
@@ -329,6 +332,7 @@
   .close-ac-card-desktop:hover {
     background: var(--placeholder-color);
   }
+
   .close-ac-card-desktop:active {
     background: var(--focus-color-btn);
   }
@@ -368,9 +372,7 @@
   .card-footer {
     height: 60%;
   }
-  .close-ac-card-mobile:active {
-    background: var(--mockup-highlight);
-  }
+
   .input_ac {
     width: 60%;
     transition: all 300ms ease-in-out;
@@ -408,13 +410,18 @@
   .ac-circle span {
     display: flex;
   }
-  .ac-circle:hover,
+
   .ac-btn-fill:hover,
   .ec-btn-fill:hover {
     background: var(--mockup-highlight);
     border: 2px solid var(--mockup-highlight);
     box-shadow: 0 6px 5px rgba(0, 0, 0, 0.18);
   }
+  .ac-circle:hover,
+  .ec-circle:hover {
+    background: var(--mockup-highlight);
+  }
+
   .ac-btn-white:hover,
   .ec-btn-white:hover {
     border: 2px solid var(--mockup-highlight);
@@ -431,6 +438,7 @@
     background: var(--focus-color-btn);
     border: 2px solid var(--focus-color-btn);
   }
+
   .ac-btn-white:active,
   .ec-btn-white:active {
     border: 2px solid var(--focus-color-btn);
@@ -439,11 +447,35 @@
   .ac-btn-white:active svg path {
     stroke: var(--focus-color-btn);
   }
+  .close-ac-card-mobile:hover {
+    background: var(--placeholder-color);
+  }
+  .close-ac-card-mobile:active {
+    background: var(--mockup-highlight);
+  }
+  .desktop-menu:hover,
+  .ec-menu:hover {
+    background: var(--placeholder-color);
+  }
+  .desktop-menu:active svg path,
+  .ec-menu:active svg path {
+    fill: white;
+  }
+  .desktop-menu span:active,
+  .ec-menu span:active {
+    color: white;
+  }
+  .ec-circle:active,
+  .desktop-menu:active,
+  .ec-menu:active {
+    background: var(--focus-color-btn);
+  }
 }
 
 @media (max-width: 761px) {
-  .ac-circle:active {
-    background: var(--mockup-highlight);
+  .ac-circle:active,
+  .ec-circle:active {
+    background: var(--focus-color-btn);
   }
   .ac-btn-fill:active,
   .ec-btn-fill:active {
@@ -452,6 +484,17 @@
   }
   .footer-right {
     margin-inline: 0;
+  }
+  .close-ac-card-mobile:active {
+    background: var(--mockup-highlight);
+  }
+  .ec-menu:active {
+    background: var(--placeholder-color);
+  }
+  .ec-btn-white:active {
+    border: 2px solid var(--focus-color-btn);
+    color: var(--focus-color-btn);
+    transition: none;
   }
 }
 
