better  email registration

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,8 +1,7 @@
-
 <header class="header">
-    <div class="header-gap">
-        <img class="header-logo" src="/assets/img/logo.png" alt="join logo">
+  <div class="header-gap">
+    <img class="header-logo" src="/assets/img/logo.png" alt="join logo" />
 
-        <div class="header-profil"></div>
-    </div>
+    <div id="header-initials-id" class="header-profil"></div>
+  </div>
 </header>
