--- a/css/global.css
+++ b/css/global.css
@@ -108,6 +108,39 @@ input:-webkit-autofill:active {
     transform: rotate(1turn);
   }
 }
+.tooltip {
+  position: relative;
+  cursor: pointer;
+  font-weight: 700;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--mockup-color);
+  border-radius: 50%;
+  text-align: center;
+  margin-right: 4px;
+  font-size: 14px;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 310px;
+  background-color: var(--mockup-color);
+  color: #fff;
+  text-align: left;
+  border-radius: 20px 20px 0px 20px;
+  padding: 12px;
+  font-weight: 100;
+  position: absolute;
+  z-index: 1000;
+  bottom: 120%;
+  right: 50%;
+  margin-left: -60px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.tooltiptext ul {
+  list-style: circle inside;
+}
 
 .success-msg-popup {
   position: fixed;
@@ -298,10 +331,13 @@ textarea::placeholder {
     color: var(--focus-color-btn);
   }
   .success-msg-popup {
-    transform: translate(calc(-50% + 116px), 700%);
+    transform: translate(calc(-50% + 116px), 800%);
   }
   .success-msg-popup.slide-sm {
-    transform: translate(calc(-50% + 116px), 300%);
+    transform: translate(calc(-50% + 116px), 100%);
+  }
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
   }
 }
 
@@ -313,8 +349,12 @@ textarea::placeholder {
   .success-msg-popup {
     height: 55px;
     width: 250px;
+    transform: translate(calc(-100% + 116px), 900%);
   }
   .success-msg-popup span {
     font-size: 18px;
+  }
+  .tooltip:active .tooltiptext {
+    visibility: visible;
   }
 }
