--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,6 +2,14 @@
   <div class="header-gap">
     <img class="header-logo" src="/assets/img/logo.png" alt="join logo" />
 
-    <div id="header-initials-id" class="header-profil"></div>
+    <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
+    <div id="logout-id" class="logout-dropdown">
+ 
+        <a >Legal Notice</a>
+        <a >Privacy Policy</a>
+        <a href="./index.html">Log out</a>
+     
+    </div>
+    </div>
   </div>
 </header>
